fix fullscreen image alignment

--- a/collager-app/src/components/Session/FullscreenSession/FullscreenSession.scss
+++ b/collager-app/src/components/Session/FullscreenSession/FullscreenSession.scss
@@ -13,6 +13,7 @@
       img {
         object-fit: contain;
         z-index: 10;
+        width: 100%;
       }
 
       &:before {
